all po files updated from develop at 2019-03-06 19:26

--- a/po/es.po
+++ b/po/es.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-02-22 14:27+0330\n"
+"POT-Creation-Date: 2019-03-06 19:22+0100\n"
 "PO-Revision-Date: 2018-12-29 02:52+0100\n"
 "Last-Translator: Jose Juan <jzapater@gmail.com>\n"
 "Language-Team: SFTEAM  angelo2807@hotmail.com\n"
@@ -2075,8 +2075,10 @@ msgstr "Modo Configuración: %s"
 msgid "Configuration..."
 msgstr "Configuración de Red..."
 
-msgid "Configure DVB-ATSC"
-msgstr ""
+#
+#, fuzzy
+msgid "Configure ATSC"
+msgstr "Configurando"
 
 #
 #, fuzzy
@@ -3522,6 +3524,10 @@ msgstr "Inglés"
 msgid "Enigma (re)starts: %d\n"
 msgstr "Enigma (re) comienza:% d\n"
 
+#, python-format
+msgid "Enigma debug level: %d\n"
+msgstr ""
+
 msgid "Enigma version: "
 msgstr "Enigma versión:"
 
@@ -4868,11 +4874,6 @@ msgstr "Directorio seleccionado inválido: %s"
 
 #
 msgid "Invalid location"
-msgstr "Locación inválida"
-
-#
-#, fuzzy
-msgid "Invalid reason"
 msgstr "Locación inválida"
 
 msgid "Invalid transponder data"
@@ -7373,6 +7374,10 @@ msgstr "Reiniciar el enigma"
 msgid "Restart enigma in debug mode"
 msgstr "Reiniciar enigma en modo de depuración"
 
+#, fuzzy
+msgid "Restart enigma in standard mode"
+msgstr "Reiniciar enigma en modo de depuración"
+
 #
 msgid "Restart network"
 msgstr "Reiniciar Red"
@@ -7824,7 +7829,7 @@ msgstr "Seleccione ‘A’ o ‘B’ si su sistema aéreo lo requiere, de lo con
 msgid "Select 'FBC SCR' if this tuner will connect to a SCR (Unicable/JESS) device. For all other setups select 'FBC automatic'."
 msgstr "Seleccione ‘FBC SCR’ si este sintonizador se conectará a un dispositivo SCR (Unicable / JESS). Para todas las demás configuraciones, seleccione ‘FBC automático’."
 
-msgid "Select 'Yes' when you want to configure this tuner for DVB-ATSC"
+msgid "Select 'Yes' when you want to configure this tuner for ATSC"
 msgstr ""
 
 msgid "Select 'Yes' when you want to configure this tuner for DVB-C"
