--- a/po/id.po
+++ b/po/id.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-02-22 14:27+0330\n"
+"POT-Creation-Date: 2019-03-06 19:22+0100\n"
 "PO-Revision-Date: \n"
 "Last-Translator: Budiarno Pedode\n"
 "Language-Team: \n"
@@ -1886,8 +1886,9 @@ msgstr "Mode penyetelan: %s"
 msgid "Configuration..."
 msgstr "Penyetelan..."
 
-msgid "Configure DVB-ATSC"
-msgstr ""
+#, fuzzy
+msgid "Configure ATSC"
+msgstr "Pengaturan"
 
 #, fuzzy
 msgid "Configure DVB-C"
@@ -3205,6 +3206,10 @@ msgstr "Inggris"
 msgid "Enigma (re)starts: %d\n"
 msgstr "Enigma (re)starts: %d\n"
 
+#, python-format
+msgid "Enigma debug level: %d\n"
+msgstr ""
+
 #, fuzzy
 msgid "Enigma version: "
 msgstr "Kernel version: "
@@ -4467,10 +4472,6 @@ msgid "Invalid directory selected: %s"
 msgstr "Direktori tidak valid dipilih: %s"
 
 msgid "Invalid location"
-msgstr "Lokasi tidak valid"
-
-#, fuzzy
-msgid "Invalid reason"
 msgstr "Lokasi tidak valid"
 
 msgid "Invalid transponder data"
@@ -6706,6 +6707,10 @@ msgstr "Mulai ulang enigma"
 msgid "Restart enigma in debug mode"
 msgstr "Mulai ulang enigma pada mode debug"
 
+#, fuzzy
+msgid "Restart enigma in standard mode"
+msgstr "Mulai ulang enigma pada mode debug"
+
 msgid "Restart network"
 msgstr "Mulai ulang jaringan"
 
@@ -7112,7 +7117,7 @@ msgstr "Pilih 'A' atau 'B' jika sistem antena anda memerlukan ini, sebaliknya pi
 msgid "Select 'FBC SCR' if this tuner will connect to a SCR (Unicable/JESS) device. For all other setups select 'FBC automatic'."
 msgstr "Pilih 'FBC SCR' jika penala ini akan terhubung ke perangkat SCR (Unikabel/JESS). Untuk semua setelan lain pilih 'FBC otomatis'."
 
-msgid "Select 'Yes' when you want to configure this tuner for DVB-ATSC"
+msgid "Select 'Yes' when you want to configure this tuner for ATSC"
 msgstr ""
 
 msgid "Select 'Yes' when you want to configure this tuner for DVB-C"
