--- a/po/lt.po
+++ b/po/lt.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PLi enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-02-22 14:27+0330\n"
+"POT-Creation-Date: 2019-03-06 19:22+0100\n"
 "PO-Revision-Date: 2019-01-11 19:33+0200\n"
 "Last-Translator: Audronis Grincevicius <adga45@gmail.com>\n"
 "Language-Team: Adga (C) <adga45@gmail.com>\n"
@@ -1868,8 +1868,9 @@ msgstr "Konfigūravimo būdas: %s"
 msgid "Configuration..."
 msgstr "Konfigūracija..."
 
-msgid "Configure DVB-ATSC"
-msgstr ""
+#, fuzzy
+msgid "Configure ATSC"
+msgstr "Konfigūruojama"
 
 #, fuzzy
 msgid "Configure DVB-C"
@@ -3168,6 +3169,10 @@ msgstr "Anglų"
 msgid "Enigma (re)starts: %d\n"
 msgstr "Paleidimų skaičius: %d\n"
 
+#, python-format
+msgid "Enigma debug level: %d\n"
+msgstr ""
+
 msgid "Enigma version: "
 msgstr "Enigmos versija: "
 
@@ -4394,10 +4399,6 @@ msgid "Invalid directory selected: %s"
 msgstr "Pasirinktas negaliojantis katalogas: %s"
 
 msgid "Invalid location"
-msgstr "Neteisinga vieta"
-
-#, fuzzy
-msgid "Invalid reason"
 msgstr "Neteisinga vieta"
 
 msgid "Invalid transponder data"
@@ -6589,6 +6590,10 @@ msgstr "Paleisti grafinę aplinką iš naujo"
 msgid "Restart enigma in debug mode"
 msgstr "Iš naujo paleisti enigma derinimo režimu"
 
+#, fuzzy
+msgid "Restart enigma in standard mode"
+msgstr "Iš naujo paleisti enigma derinimo režimu"
+
 msgid "Restart network"
 msgstr "Paleisti tinklą iš naujo"
 
@@ -6990,7 +6995,7 @@ msgstr "Pasirinkite 'A' arba 'B', jei jūsų antenos sistema reikalauja to, kita
 msgid "Select 'FBC SCR' if this tuner will connect to a SCR (Unicable/JESS) device. For all other setups select 'FBC automatic'."
 msgstr "Pasirinkite 'FBC SCR' jei šis imtuvas prisijungtas prie SCR (Unicable/JESS) įrenginio. Visiems kitiems nustatymams pasirinkite 'FBC automatinis'."
 
-msgid "Select 'Yes' when you want to configure this tuner for DVB-ATSC"
+msgid "Select 'Yes' when you want to configure this tuner for ATSC"
 msgstr ""
 
 msgid "Select 'Yes' when you want to configure this tuner for DVB-C"
