--- a/po/nb.po
+++ b/po/nb.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-02-22 14:27+0330\n"
+"POT-Creation-Date: 2019-03-06 19:22+0100\n"
 "PO-Revision-Date: 2019-02-01 15:59+0100\n"
 "Last-Translator: GeirJ <dummy@dummy.com>\n"
 "Language-Team: GeirJ\n"
@@ -2053,8 +2053,10 @@ msgstr "Oppsettstype: %s"
 msgid "Configuration..."
 msgstr "Innstilling..."
 
-msgid "Configure DVB-ATSC"
-msgstr ""
+#
+#, fuzzy
+msgid "Configure ATSC"
+msgstr "Installerer"
 
 #
 #, fuzzy
@@ -3477,6 +3479,10 @@ msgstr "Engelsk"
 msgid "Enigma (re)starts: %d\n"
 msgstr "Enigma (re)starter: %d\n"
 
+#, python-format
+msgid "Enigma debug level: %d\n"
+msgstr ""
+
 #
 msgid "Enigma version: "
 msgstr "Enigma versjon: "
@@ -4843,11 +4849,6 @@ msgstr "Ugyldig mappe er valgt:%s"
 
 #
 msgid "Invalid location"
-msgstr "Ugyldig mappe"
-
-#
-#, fuzzy
-msgid "Invalid reason"
 msgstr "Ugyldig mappe"
 
 #
@@ -7332,6 +7333,10 @@ msgstr "Start enigma2 på nytt"
 msgid "Restart enigma in debug mode"
 msgstr "Starte Enigma i feilsøkingsmodus"
 
+#, fuzzy
+msgid "Restart enigma in standard mode"
+msgstr "Starte Enigma i feilsøkingsmodus"
+
 msgid "Restart network"
 msgstr "Start nettverket på nytt"
 
@@ -7778,7 +7783,7 @@ msgstr "Velg 'A' eller 'B' hvis antenne systemet krever dette, ellers, velger du
 msgid "Select 'FBC SCR' if this tuner will connect to a SCR (Unicable/JESS) device. For all other setups select 'FBC automatic'."
 msgstr "Velg 'FBC SCR' hvis denne tuneren bruker en SCR (Unicable/JESS) enhet. Velg 'FBC automatisk' for alle andre oppsett."
 
-msgid "Select 'Yes' when you want to configure this tuner for DVB-ATSC"
+msgid "Select 'Yes' when you want to configure this tuner for ATSC"
 msgstr ""
 
 msgid "Select 'Yes' when you want to configure this tuner for DVB-C"
