--- a/po/pt.po
+++ b/po/pt.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-02-22 14:27+0330\n"
+"POT-Creation-Date: 2019-03-06 19:22+0100\n"
 "PO-Revision-Date: 2014-12-15 19:38-0000\n"
 "Last-Translator: Phenom <phenomxy@gmail.com>\n"
 "Language-Team: Muaitai <muaitai@gmail.com>\n"
@@ -2119,8 +2119,10 @@ msgstr "Modo de configuração: %s"
 msgid "Configuration..."
 msgstr "Configuração..."
 
-msgid "Configure DVB-ATSC"
-msgstr ""
+#
+#, fuzzy
+msgid "Configure ATSC"
+msgstr "A configurar"
 
 #
 #, fuzzy
@@ -3625,6 +3627,10 @@ msgstr "Inglês"
 msgid "Enigma (re)starts: %d\n"
 msgstr ""
 
+#, python-format
+msgid "Enigma debug level: %d\n"
+msgstr ""
+
 #, fuzzy
 msgid "Enigma version: "
 msgstr "Versão do Kernel: "
@@ -5011,11 +5017,6 @@ msgstr "Directório seleccionado inválido: %s"
 #
 #, fuzzy
 msgid "Invalid location"
-msgstr "Localização inválida"
-
-#
-#, fuzzy
-msgid "Invalid reason"
 msgstr "Localização inválida"
 
 msgid "Invalid transponder data"
@@ -7663,6 +7664,10 @@ msgstr "Reiniciar o enigma"
 msgid "Restart enigma in debug mode"
 msgstr "Reiniciar o enigma"
 
+#, fuzzy
+msgid "Restart enigma in standard mode"
+msgstr "Reiniciar o enigma"
+
 #
 msgid "Restart network"
 msgstr "Reiniciar a rede"
@@ -8139,7 +8144,7 @@ msgstr ""
 msgid "Select 'FBC SCR' if this tuner will connect to a SCR (Unicable/JESS) device. For all other setups select 'FBC automatic'."
 msgstr ""
 
-msgid "Select 'Yes' when you want to configure this tuner for DVB-ATSC"
+msgid "Select 'Yes' when you want to configure this tuner for ATSC"
 msgstr ""
 
 msgid "Select 'Yes' when you want to configure this tuner for DVB-C"
