--- a/po/ru.po
+++ b/po/ru.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-02-22 14:27+0330\n"
+"POT-Creation-Date: 2019-03-06 19:22+0100\n"
 "PO-Revision-Date: 2019-02-05 10:33+0200\n"
 "Last-Translator: Dimitrij <Dima-73@inbox.lv>\n"
 "Language-Team: openPLi Dimitrij\n"
@@ -1866,8 +1866,9 @@ msgstr "Режим конфигурации: %s"
 msgid "Configuration..."
 msgstr "Конфигурация..."
 
-msgid "Configure DVB-ATSC"
-msgstr ""
+#, fuzzy
+msgid "Configure ATSC"
+msgstr "Настройки"
 
 #, fuzzy
 msgid "Configure DVB-C"
@@ -3161,6 +3162,10 @@ msgstr "Английский"
 msgid "Enigma (re)starts: %d\n"
 msgstr "Энигма (ре)стартов: %d\n"
 
+#, python-format
+msgid "Enigma debug level: %d\n"
+msgstr ""
+
 msgid "Enigma version: "
 msgstr "Версия энигмы: "
 
@@ -4390,10 +4395,6 @@ msgid "Invalid directory selected: %s"
 msgstr "Выбран неправильный каталог: %s"
 
 msgid "Invalid location"
-msgstr "Неправильное расположение"
-
-#, fuzzy
-msgid "Invalid reason"
 msgstr "Неправильное расположение"
 
 msgid "Invalid transponder data"
@@ -6588,6 +6589,10 @@ msgstr "Рестарт GUI"
 msgid "Restart enigma in debug mode"
 msgstr "Рестарт GUI для режима отладки"
 
+#, fuzzy
+msgid "Restart enigma in standard mode"
+msgstr "Рестарт GUI для режима отладки"
+
 msgid "Restart network"
 msgstr "Рестарт сети"
 
@@ -6989,7 +6994,7 @@ msgstr "Выберите 'A' или 'B', если Ваша система тре
 msgid "Select 'FBC SCR' if this tuner will connect to a SCR (Unicable/JESS) device. For all other setups select 'FBC automatic'."
 msgstr "Выберите 'FBC SCR' ,если Ваш тюнер испрользует устройство SCR (Unicable/JESS). В остальных случаях используйте 'FBC автоматически'."
 
-msgid "Select 'Yes' when you want to configure this tuner for DVB-ATSC"
+msgid "Select 'Yes' when you want to configure this tuner for ATSC"
 msgstr ""
 
 msgid "Select 'Yes' when you want to configure this tuner for DVB-C"
