--- a/po/sk.po
+++ b/po/sk.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-02-22 14:27+0330\n"
+"POT-Creation-Date: 2019-03-06 19:22+0100\n"
 "PO-Revision-Date: 2019-02-06 13:41+0100\n"
 "Last-Translator: Andrej Tobola <andrej.tobola@gmail.com>\n"
 "Language-Team: \n"
@@ -1867,8 +1867,9 @@ msgstr "Možnosti nastavenia: %s"
 msgid "Configuration..."
 msgstr "Konfigurácia..."
 
-msgid "Configure DVB-ATSC"
-msgstr ""
+#, fuzzy
+msgid "Configure ATSC"
+msgstr "Konfigurujem"
 
 #, fuzzy
 msgid "Configure DVB-C"
@@ -3162,6 +3163,10 @@ msgstr "Angličtina"
 msgid "Enigma (re)starts: %d\n"
 msgstr "Počet (re)štartov Enigmy: %d\n"
 
+#, python-format
+msgid "Enigma debug level: %d\n"
+msgstr ""
+
 msgid "Enigma version: "
 msgstr "Verzia Enigmy: "
 
@@ -4389,10 +4394,6 @@ msgid "Invalid directory selected: %s"
 msgstr "Zvolený neplatný adresár: %s"
 
 msgid "Invalid location"
-msgstr "Neplatné umiestnenie"
-
-#, fuzzy
-msgid "Invalid reason"
 msgstr "Neplatné umiestnenie"
 
 msgid "Invalid transponder data"
@@ -6583,6 +6584,10 @@ msgstr "Reštartovať Enigmu"
 msgid "Restart enigma in debug mode"
 msgstr "Reštartovať Enigmu v debug móde"
 
+#, fuzzy
+msgid "Restart enigma in standard mode"
+msgstr "Reštartovať Enigmu v debug móde"
+
 msgid "Restart network"
 msgstr "Reštartovať sieť"
 
@@ -6984,7 +6989,7 @@ msgstr "Vyberte 'A' alebo 'B' ak to váš anténny systém vyžaduje, inak zvolt
 msgid "Select 'FBC SCR' if this tuner will connect to a SCR (Unicable/JESS) device. For all other setups select 'FBC automatic'."
 msgstr "Vyberte 'FBC SCR' ak sa tento tuner pripojí na SCR (Unicable/JESS) zariadenie. Pre všetky ostatné nastavenia vyberte 'Automatický FBC'."
 
-msgid "Select 'Yes' when you want to configure this tuner for DVB-ATSC"
+msgid "Select 'Yes' when you want to configure this tuner for ATSC"
 msgstr ""
 
 msgid "Select 'Yes' when you want to configure this tuner for DVB-C"
