--- a/po/sl.po
+++ b/po/sl.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Project Slovenia\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-02-22 14:27+0330\n"
+"POT-Creation-Date: 2019-03-06 19:22+0100\n"
 "PO-Revision-Date: 2015-08-30 09:00+0200\n"
 "Last-Translator: Taykun345 <support@satnigmo.com>\n"
 "Language-Team: Satnigmo <support@satnigmo.com>\n"
@@ -2143,8 +2143,10 @@ msgstr "Nastavitveni način:  %s"
 msgid "Configuration..."
 msgstr "Dodatne nastavitve"
 
-msgid "Configure DVB-ATSC"
-msgstr ""
+#
+#, fuzzy
+msgid "Configure ATSC"
+msgstr "Nastavljam..."
 
 #
 #, fuzzy
@@ -3645,6 +3647,10 @@ msgstr "Angleško"
 msgid "Enigma (re)starts: %d\n"
 msgstr "Št. ponovnih zagonov: %d\n"
 
+#, python-format
+msgid "Enigma debug level: %d\n"
+msgstr ""
+
 #, fuzzy
 msgid "Enigma version: "
 msgstr "Verzija jedra: "
@@ -5032,11 +5038,6 @@ msgstr "Izbrana neveljavna mapa: %s"
 
 #
 msgid "Invalid location"
-msgstr "Neveljavna lokacija"
-
-#
-#, fuzzy
-msgid "Invalid reason"
 msgstr "Neveljavna lokacija"
 
 #
@@ -7634,6 +7635,11 @@ msgid "Restart enigma in debug mode"
 msgstr "Ponovni zagon Enigme"
 
 #
+#, fuzzy
+msgid "Restart enigma in standard mode"
+msgstr "Ponovni zagon Enigme"
+
+#
 msgid "Restart network"
 msgstr "Ponovni zagon omrežja"
 
@@ -8109,7 +8115,7 @@ msgstr ""
 msgid "Select 'FBC SCR' if this tuner will connect to a SCR (Unicable/JESS) device. For all other setups select 'FBC automatic'."
 msgstr ""
 
-msgid "Select 'Yes' when you want to configure this tuner for DVB-ATSC"
+msgid "Select 'Yes' when you want to configure this tuner for ATSC"
 msgstr ""
 
 msgid "Select 'Yes' when you want to configure this tuner for DVB-C"
