--- a/po/ku.po
+++ b/po/ku.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2 Kurdish translation\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-02-22 14:27+0330\n"
+"POT-Creation-Date: 2019-03-06 19:22+0100\n"
 "PO-Revision-Date: 2013-04-22 04:29+0330\n"
 "Last-Translator: dimili21\n"
 "Language-Team: \n"
@@ -1872,8 +1872,9 @@ msgstr "Configuration mode: %s"
 msgid "Configuration..."
 msgstr "Çékirin..."
 
-msgid "Configure DVB-ATSC"
-msgstr ""
+#, fuzzy
+msgid "Configure ATSC"
+msgstr "Configuring"
 
 #, fuzzy
 msgid "Configure DVB-C"
@@ -3186,6 +3187,10 @@ msgstr "Engiliz"
 msgid "Enigma (re)starts: %d\n"
 msgstr ""
 
+#, python-format
+msgid "Enigma debug level: %d\n"
+msgstr ""
+
 #, fuzzy
 msgid "Enigma version: "
 msgstr "Kernel version: "
@@ -4413,10 +4418,6 @@ msgid "Invalid directory selected: %s"
 msgstr "Invalid directory selected: %s"
 
 msgid "Invalid location"
-msgstr "Invalid location"
-
-#, fuzzy
-msgid "Invalid reason"
 msgstr "Invalid location"
 
 msgid "Invalid transponder data"
@@ -6643,6 +6644,10 @@ msgstr "Restart enigma"
 msgid "Restart enigma in debug mode"
 msgstr "Restart enigma"
 
+#, fuzzy
+msgid "Restart enigma in standard mode"
+msgstr "Restart enigma"
+
 msgid "Restart network"
 msgstr "Restart network"
 
@@ -7049,7 +7054,7 @@ msgstr ""
 msgid "Select 'FBC SCR' if this tuner will connect to a SCR (Unicable/JESS) device. For all other setups select 'FBC automatic'."
 msgstr ""
 
-msgid "Select 'Yes' when you want to configure this tuner for DVB-ATSC"
+msgid "Select 'Yes' when you want to configure this tuner for ATSC"
 msgstr ""
 
 msgid "Select 'Yes' when you want to configure this tuner for DVB-C"
