--- a/po/nl.po
+++ b/po/nl.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-02-22 14:27+0330\n"
+"POT-Creation-Date: 2019-03-06 19:22+0100\n"
 "PO-Revision-Date: \n"
 "Last-Translator: Frenske <voorzitter@openpli.org>\n"
 "Language-Team: PLiteam <translators@openpli.org>\n"
@@ -1862,8 +1862,9 @@ msgstr "Configuratiemodus: %s"
 msgid "Configuration..."
 msgstr "Configuratie..."
 
-msgid "Configure DVB-ATSC"
-msgstr ""
+#, fuzzy
+msgid "Configure ATSC"
+msgstr "Configureren"
 
 #, fuzzy
 msgid "Configure DVB-C"
@@ -3327,6 +3328,10 @@ msgstr "Engels"
 msgid "Enigma (re)starts: %d\n"
 msgstr "Enigma (her)starts: %d\n"
 
+#, python-format
+msgid "Enigma debug level: %d\n"
+msgstr ""
+
 msgid "Enigma version: "
 msgstr "Enigma versie: "
 
@@ -4562,10 +4567,6 @@ msgid "Invalid directory selected: %s"
 msgstr "Ongeldige map geselecteerd: %s"
 
 msgid "Invalid location"
-msgstr "Ongeldige locatie"
-
-#, fuzzy
-msgid "Invalid reason"
 msgstr "Ongeldige locatie"
 
 msgid "Invalid transponder data"
@@ -6766,6 +6767,10 @@ msgstr "Herstart Enigma2"
 msgid "Restart enigma in debug mode"
 msgstr "Herstart enigma in debug modus"
 
+#, fuzzy
+msgid "Restart enigma in standard mode"
+msgstr "Herstart enigma in debug modus"
+
 msgid "Restart network"
 msgstr "Netwerk herstarten"
 
@@ -7166,7 +7171,7 @@ msgstr "Kies voor 'A' of 'B' indien uw antenne dit vereist, of anders kies je vo
 msgid "Select 'FBC SCR' if this tuner will connect to a SCR (Unicable/JESS) device. For all other setups select 'FBC automatic'."
 msgstr "Kies voor 'Unicable' als de tuner gebruikt maakt van een SRC (Unicable / Jess) apparaat. In elk ander geval kies voor 'FBC automatisch'."
 
-msgid "Select 'Yes' when you want to configure this tuner for DVB-ATSC"
+msgid "Select 'Yes' when you want to configure this tuner for ATSC"
 msgstr ""
 
 msgid "Select 'Yes' when you want to configure this tuner for DVB-C"
