--- a/po/pl.po
+++ b/po/pl.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-02-22 14:27+0330\n"
+"POT-Creation-Date: 2019-03-06 19:22+0100\n"
 "PO-Revision-Date: 2018-11-12 17:39+0100\n"
 "Last-Translator: blzr <blzr@o2.pl>\n"
 "Language-Team: \n"
@@ -1869,8 +1869,9 @@ msgstr "Tryb konfiguracji: %s"
 msgid "Configuration..."
 msgstr "Konfiguracja..."
 
-msgid "Configure DVB-ATSC"
-msgstr ""
+#, fuzzy
+msgid "Configure ATSC"
+msgstr "Konfigurowanie"
 
 #, fuzzy
 msgid "Configure DVB-C"
@@ -3170,6 +3171,10 @@ msgstr "Angielski"
 msgid "Enigma (re)starts: %d\n"
 msgstr "Restarty enigmy: %d\n"
 
+#, python-format
+msgid "Enigma debug level: %d\n"
+msgstr ""
+
 msgid "Enigma version: "
 msgstr "Wersja enigmy:"
 
@@ -4400,10 +4405,6 @@ msgid "Invalid directory selected: %s"
 msgstr "Wybrano niewłaściwy katalog: %s"
 
 msgid "Invalid location"
-msgstr "Nieprawidłowa lokalizacja"
-
-#, fuzzy
-msgid "Invalid reason"
 msgstr "Nieprawidłowa lokalizacja"
 
 msgid "Invalid transponder data"
@@ -6600,6 +6601,10 @@ msgstr "Restart enigmy"
 msgid "Restart enigma in debug mode"
 msgstr "Restart enigmy do trybu debugowania"
 
+#, fuzzy
+msgid "Restart enigma in standard mode"
+msgstr "Restart enigmy do trybu debugowania"
+
 msgid "Restart network"
 msgstr "Restartuj sieć"
 
@@ -7004,7 +7009,7 @@ msgstr "Wybierz 'A' lub 'B' jeżeli twój system antenowy wymaga tego, w innym p
 msgid "Select 'FBC SCR' if this tuner will connect to a SCR (Unicable/JESS) device. For all other setups select 'FBC automatic'."
 msgstr "Wybierz 'unicable' jeżeli ten tuner będzie używał urządzenia unicable. Dla wszystkich innych konfiguracji wybierz 'FBC automatyczny'."
 
-msgid "Select 'Yes' when you want to configure this tuner for DVB-ATSC"
+msgid "Select 'Yes' when you want to configure this tuner for ATSC"
 msgstr ""
 
 msgid "Select 'Yes' when you want to configure this tuner for DVB-C"
