--- a/po/cs.po
+++ b/po/cs.po
@@ -11,8 +11,8 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=3; plural=n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
-"X-Generator: Poedit 1.8.7.1\n"
+"Plural-Forms: nplurals=3; plural=(n==1) ? 0 : (n>=2 && n<=4) ? 1 : 2;\n"
+"X-Generator: Poedit 2.0.6\n"
 
 #
 msgid ""
@@ -2118,9 +2118,8 @@ msgstr "Konfigurační mód:  %s"
 msgid "Configuration..."
 msgstr "Nastavení..."
 
-#, fuzzy
 msgid "Configure ATSC"
-msgstr "Konfigurovat DVB-ATSC"
+msgstr "Konfigurovat ATSC"
 
 #
 msgid "Configure DVB-C"
@@ -4638,11 +4637,11 @@ msgstr ""
 
 #
 msgid "Hotswitchable"
-msgstr "Přepínatelný"
+msgstr ""
 
 #
 msgid "Hotswitchable tuner"
-msgstr "Přepínatelný tuner"
+msgstr ""
 
 msgid "How many minutes do you want add to the recording?"
 msgstr "Kolik minut chcete přidat k nahrávání?"
@@ -7577,9 +7576,8 @@ msgid "Restart enigma in debug mode"
 msgstr "Restart enigma v debug módu"
 
 #
-#, fuzzy
 msgid "Restart enigma in standard mode"
-msgstr "Restart enigma v debug módu"
+msgstr "Restart enigma ve standardním módu"
 
 #
 msgid "Restart network"
@@ -8046,9 +8044,8 @@ msgstr "Zvolte 'A' nebo 'B', pokud to Váš anténní systém vyžaduje, jinak z
 msgid "Select 'FBC SCR' if this tuner will connect to a SCR (Unicable/JESS) device. For all other setups select 'FBC automatic'."
 msgstr "Jestliže tuner bude připojen k SRC zařízení (Unicable/JESS), nastavte 'FCB SRC'. Pro všechna ostatní nastavení zvolte 'FBC automatic'."
 
-#, fuzzy
 msgid "Select 'Yes' when you want to configure this tuner for ATSC"
-msgstr "Chcete-li konfigurovat tento tuner pro DVB-ATSC, zvolte 'Ano'"
+msgstr "Chcete-li konfigurovat tento tuner pro ATSC, zvolte 'Ano'"
 
 msgid "Select 'Yes' when you want to configure this tuner for DVB-C"
 msgstr "Chcete-li konfigurovat tento tuner pro DVB-C, zvolte 'Ano'"
