Update Latvian translation

--- a/po/lv.po
+++ b/po/lv.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-03-06 19:22+0100\n"
+"POT-Creation-Date: 2019-03-10 12:18+0200\n"
 "PO-Revision-Date: 2014-11-12 00:49+0200\n"
 "Last-Translator: Taapat <taapat@gmail.com>\n"
 "Language-Team: Taapat <taapat@gmail.com>\n"
@@ -1869,9 +1869,8 @@ msgstr "Konfigurēšanas režīms: %s"
 msgid "Configuration..."
 msgstr "Konfigurācija..."
 
-#, fuzzy
 msgid "Configure ATSC"
-msgstr "Iestatīt DVB-ATSC"
+msgstr "Iestatīt ATSC"
 
 msgid "Configure DVB-C"
 msgstr "Iestatīt DVB-C"
@@ -2869,7 +2868,7 @@ msgid "Do you want to reboot your receiver?"
 msgstr "Vai vēlaties pārstartēt uztvērēju?"
 
 msgid "Do you want to remove all the crahs logfiles"
-msgstr "Vai vēlaties dzēst visus logfailus"
+msgstr "Vai vēlaties dzēst visus žurnāla failus"
 
 msgid "Do you want to remove the package:\n"
 msgstr "Vai vēlaties dzēst pakotni:\n"
@@ -3164,7 +3163,7 @@ msgstr "Enigma (pār)startēta: %d reizes\n"
 
 #, python-format
 msgid "Enigma debug level: %d\n"
-msgstr ""
+msgstr "Atkļūdošanas līmenis: %d\n"
 
 msgid "Enigma version: "
 msgstr "Enigmas versija: "
@@ -4721,7 +4720,7 @@ msgid "Log results to /tmp"
 msgstr "Žurnalēt rezultātus /tmp"
 
 msgid "Logfile does not exist anymore"
-msgstr "Logfaili vairs neeksistē"
+msgstr "Žurnāla fails vairs neeksistē"
 
 msgid "Long filenames"
 msgstr "Garie failu vārdi"
@@ -6112,6 +6111,18 @@ msgstr "Sagatavo... Lūdzu uzgaidiet"
 msgid "Press '0' to toggle PiP mode"
 msgstr "Nospiediet '0' lai pārslēgtu PiP režīmu"
 
+msgid "Press 'OK' for attach function."
+msgstr "Nospiediet OK, lai pievienotu darbību."
+
+msgid "Press 'OK' for attach next function or 'CH+/-' for edit attached."
+msgstr "Nospiediet OK, lai pievienotu nākošo darbību, vai CH+/- lai izmainīto pievienoto."
+
+msgid "Press 'OK' for remove item or 'CH+/-' for toggle to list of features."
+msgstr "Nospiediet OK, lai noņemtu darbību, vai CH+/- lai pārslēgtos uz blakus sarakstu."
+
+msgid "Press 'OK' for remove item or < > for change order or 'CH+/-' for toggle to list of features."
+msgstr "Nospiediet OK, lai noņemtu darbību, < > lai izmainītu kārtību, vai CH+/- lai pārslēgtos uz blakus sarakstu."
+
 msgid "Press INFO on your remote control for additional information."
 msgstr "Papildus informācijai spiediet INFO uz tālvadības pults."
 
@@ -6160,6 +6171,12 @@ msgstr "Nospiediet OK, lai pārslēgtu izvēli."
 
 msgid "Press OK, save and exit..."
 msgstr "Spiediet OK, lai saglabātu un izietu..."
+
+msgid "Press or select button and then press 'OK' for attach function."
+msgstr "Izvēlieties pogu un spiediet OK, lai pievienotu darbību."
+
+msgid "Press or select button and then press 'OK' for attach next function or edit attached."
+msgstr "Izvēlieties pogu un spiediet OK, lai pievienotu nākošo darbību vai izmainītu esošo."
 
 msgid "Press yellow to set this interface as default interface."
 msgstr "Spiediet dzelteno, lai iestatītu šo interfeisu kā noklusējuma."
@@ -6457,7 +6474,7 @@ msgid "Remove a nameserver entry"
 msgstr "Dzēst DNS ierakstu"
 
 msgid "Remove all logfiles"
-msgstr "Dzēst visus logfailus"
+msgstr "Dzēst visus žurnāla failus"
 
 msgid "Remove bookmark"
 msgstr "Dzēst"
@@ -6475,7 +6492,7 @@ msgid "Remove plugins"
 msgstr "Dzēst spraudņus"
 
 msgid "Remove this logfile"
-msgstr "Dzēst šo logfailu"
+msgstr "Dzēst šo žurnāla failu"
 
 msgid "Remove title"
 msgstr "Dzēst virsrakstu"
@@ -6581,9 +6598,8 @@ msgstr "Pārstartēt enigmu"
 msgid "Restart enigma in debug mode"
 msgstr "Pārstartēt enigmu testa režīmā"
 
-#, fuzzy
 msgid "Restart enigma in standard mode"
-msgstr "Pārstartēt enigmu testa režīmā"
+msgstr "Pārstartēt enigmu standarta režīmā"
 
 msgid "Restart network"
 msgstr "Pārstartēt tīklu"
@@ -6986,9 +7002,8 @@ msgstr "Izvēlieties 'A' vai 'B', ja tas nepieciešmas jūsu antenu sistēmai, p
 msgid "Select 'FBC SCR' if this tuner will connect to a SCR (Unicable/JESS) device. For all other setups select 'FBC automatic'."
 msgstr "Izvēlieties 'FBC SCR', ja šis uztvērējs izmantos SCR (Unicable/JESS) ierīci. Visiem citiem iestatījumiem izvēlieties 'FBC automātiski'."
 
-#, fuzzy
 msgid "Select 'Yes' when you want to configure this tuner for ATSC"
-msgstr "Ja vēlaties izmantot šo uztvērēju DVB-ATSC uztveršanai izvēlieties 'Jā'"
+msgstr "Ja vēlaties izmantot šo uztvērēju ATSC uztveršanai izvēlieties 'Jā'"
 
 msgid "Select 'Yes' when you want to configure this tuner for DVB-C"
 msgstr "Ja vēlaties izmantot šo uztvērēju DVB-C uztveršanai izvēlieties 'Jā'"
